test/spec_vectors/exports/ok/module_2.wat
(module (func) (func) (export "a" (func 0)) (export "b" (func 1)))