test/spec_vectors/exports/fail/module_19.wat
(module (func) (func) (export "a" (func 0)) (export "a" (func 1)))